# MDesign

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/: Cargo.toml  MDesign.icns  README.md  bundle.sh
desktop/src/: main.rs
electron/: afterPack.cjs  agent-ipc.cjs  cli-agent.cjs  main.cjs  preload.cjs
server/: apiPlugin.ts
src/: index.css  main.tsx  vite-env.d.ts
src/agent/: agent.ts  fullPrompt.ts  systemPrompt.ts  tools.ts  verify.ts
src/agent-main/: designgen.ts  index.ts  map.ts  run.ts  transport.ts
src/components/: DialogHost.tsx  LangSwitcher.tsx  Logo.tsx
src/components/gallery/: DesignSystemModal.tsx  GuideModal.tsx  ProjectCard.tsx  Sidebar.tsx  TutorialCard.tsx
src/components/workspace/: ChatPanel.tsx  Composer.tsx  DeckView.tsx  EditPanel.tsx  FilePanel.tsx  FilePreview.tsx  FileTabView.tsx  LivePreview.tsx  MarkupLayer.tsx  Message.tsx  QuestionsTab.tsx  SettingsModal.tsx  TopBar.tsx
src/lib/: deckHtml.ts  designPresets.ts  designSystem.ts  dialog.ts  electronAgent.ts  exportProject.ts  format.ts  htmlToPptx.ts  i18n.dict.ts  i18n.ts  id.ts  ingestFiles.ts  pdfText.ts  questions.ts  resolveHtml.ts  seed.ts  store.ts  textEdit.ts  types.ts  useAgentRunner.ts  usePreviewNav.ts
src/pages/: Gallery.tsx  Workspace.tsx
src/pi-ai/: index.ts  models.ts  sse.ts  types.ts
src/pi-ai/adapters/: anthropic.ts  openai.ts
