[package]
name = "mdesign"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdesign"
path = "src/main.rs"

[dependencies]
tao = "0.30"
wry = "0.46"
muda = "0.17"
tiny_http = "0.12"
ureq = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
rust-embed = "8"
objc2-pdf-kit = "0.3.2"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"

[profile.release]
strip = true
